# kindle_web_app

./: .gitattributes  .gitignore  .pre-commit-config.yaml  My Clippings.txt  Procfile  README.md  db.sqlite3  dockerfile  manage.py  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  django.yml  pylint.yml  testing.yml
core/: .views.py.swp  admin.py  apps.py  forms.py  models.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_livro.py  0003_alter_livro_titulo.py  0004_livro_anotacao.py
core/static/core/: index.css  login.css
core/templates/core/: header.html  index.html  livro.html  login.html  page.html  page2.html  teste.html
core/utils/: proccess_data.py
kindle_web_app/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
staticfiles/core/: bootstrap.min.css.br  index.css  index.css.br  login.css.br  script.js.br
