[tool.poetry]
name = "kindle_web_app"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
black = "^22.6.0"
pylint = "^2.14.5"
Django = "^4.1"
curlylint = "^0.13.1"
Jinja2 = "^3.1.2"
django-environ = "^0.9.0"
whitenoise = "^6.2.0"
django-autocomplete-light = "^3.9.4"
psycopg2 = "^2.9.5"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
