[project]
name = "kindle_web_app"
version = "0.1.0"
description = ""
authors = [
    { name = "Pedro Henrique" }
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<4"

dependencies = [
    "black>=22.6.0",
    "pylint>=2.14.5",
    "Django>=4.1",
    "curlylint>=0.13.1",
    "Jinja2>=3.1.2",
    "django-environ>=0.9.0",
    "django-autocomplete-light>=3.9.4",
    "psycopg2-binary>=2.9.5",
    "dj-database-url>=1.2.0",
    "gunicorn>=20.1.0",
    "python-decouple>=3.8",
    "whitenoise>=6.5.0",
]

[tool.poetry.group.dev.dependencies]
# coloque seus dev deps aqui
# exemplo:
# pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
